# HW_10

./: pyproject.toml
quotes/quotes/: settings.py  urls.py
quotes/quotesapp/: forms.py  urls.py  views.py
quotes/quotesapp/migrations/: 0001_initial.py
quotes/quotesapp/templates/quotesapp/: add_author.html  add_quote.html  author_details.html  base.html  index.html
quotes/quotesapp/templates/quotesapp/includes/: quote.html
quotes/users/: urls.py  views.py
quotes/users/templates/users/: login.html  logout.html  register.html
